Allow to use with all platforms

--- a/library.properties
+++ b/library.properties
@@ -2,9 +2,9 @@ name=Totem Library
 version=1.0.7
 author=TotemMaker
 maintainer=TotemMaker <info@totemmaker.net>
-sentence=Library to connect and control Totem products
-paragraph=Provides all required functionality to find Totem robots, control connection and interact with Totem modules
+sentence=Library to control Totem robots and Mini Lab
+paragraph=Control Totem robots over BLE (ESP32). Control LabBoard over serial using Arduino
 category=Device Control
 url=https://github.com/totemmaker/TotemArduino
-architectures=esp32
+architectures=*
 includes=Totem.h
