--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=Totem Library
-version=1.1.2
-author=TotemMaker
-maintainer=TotemMaker <info@totemmaker.net>
-sentence=Library to control Totem robots and Mini Lab
-paragraph=Control Totem robots over BLE (ESP32). Control LabBoard over serial using Arduino
+version=1.2.0
+author=Totemmaker
+maintainer=Totemmaker <info@totemmaker.net>
+sentence=Library to control Totem boards, modules and Mini Lab
+paragraph=
 category=Device Control
 url=https://github.com/totemmaker/TotemArduino
 architectures=*
